better description truncation ...

--- a/config/tvFinderApp-server.json
+++ b/config/tvFinderApp-server.json
@@ -27,6 +27,9 @@
         },
         "handlebars": {
             "exports": "Handlebars"
+        },
+        "lib/cutstring": {
+            "exports": "CutString"
         }
     }
 }
