--- a/config/tvFinderApp-client.json
+++ b/config/tvFinderApp-client.json
@@ -77,6 +77,9 @@
                 "jQuery"
             ]
 
+        },
+        "lib/cutstring": {
+            "exports": "CutString"
         }
     }
 }
