--- a/config/tvFinderApp-client.json
+++ b/config/tvFinderApp-client.json
@@ -16,6 +16,7 @@
         "jQuery": "lib/jquery-1.8.3",
         "underscore": "node_modules/underscore/underscore",
         "content": "lib/content-client",
+        "cart": "lib/cart-client",
         "televisions": "lib/televisions-client"
     },
     "shim": {
