--- a/config/tvFinderApp-server.json
+++ b/config/tvFinderApp-server.json
@@ -1,4 +1,5 @@
 {
+    "optimize": "none",
     "baseUrl": "..",
     "name": "app/tvFinderApp",
     "include": "page/SingleColumn",
@@ -9,6 +10,7 @@
         "jQuery": "lib/jquery-1.8.3",
         "underscore": "node_modules/underscore/underscore",
         "content": "lib/content-server",
+        "cart": "lib/cart-server",
         "televisions": "target/televisions"
     },
     "shim": {
